crates/plotnik-lib/tests/04-emit/anchors/strict_anchor_before_group.txt
Q = (function_declaration
  .!
  {(identifier) @n}
)
------------------ DIAGNOSTICS -------------------
error: with strict adjacency (`.!`), no `function_declaration` places this child first; a `function_declaration` begins with `"async"` or `"function"`
 --> query.ptk:1:6
  |
1 | Q = (function_declaration
  |      ^^^^^^^^^^^^^^^^^^^^
  |
help: `.!` allows nothing between — not even anonymous tokens or comments; the soft anchor `.` skips those: `(function_declaration
        .
        {(identifier) @n}
      )`
